# konsole

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test.py
konsole/: __init__.py
